# wavelib

./: .gitignore  CMakeLists.txt
auxiliary/: CMakeLists.txt  denoise.c  waux.c  waux.h
cmake/: Config.cmake.in
src/: CMakeLists.txt  hsfft.h  wavelib.c
test/: CMakeLists.txt  cwttest.c  denoisetest.c  dwpttest.c  dwt2test.c  dwttest.c  modwt2test.c  modwtdenoisetest.c  modwttest.c  swt2test.c  swttest.c  wtreetest.c
unitTests/wavelibBoostTests/: CMakeLists.txt  tst_dwt.cpp
